--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,23 @@
 {
-  "presets": ["babel-preset-expo"],
+  "presets": [
+    "babel-preset-expo"
+  ],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source", "transform-decorators-legacy"],
-      "presets": ["react-native"]
+      "plugins": [
+        "transform-react-jsx-source",
+        "transform-decorators-legacy",
+        [
+          "import",
+          {
+            "libraryName": "antd-mobile",
+            "style": "css"
+          }
+        ]
+      ],
+      "presets": [
+        "react-native"
+      ]
     }
   }
 }
