--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "antd-mobile": "^2.2.6",
+    "babel-plugin-import": "^1.11.0",
     "expo": "^30.0.1",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
+    "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
