--- a/.babelrc
+++ b/.babelrc
@@ -6,14 +6,7 @@
     "development": {
       "plugins": [
         "transform-react-jsx-source",
-        "transform-decorators-legacy",
-        [
-          "import",
-          {
-            "libraryName": "antd-mobile",
-            "style": "css"
-          }
-        ]
+        "transform-decorators-legacy"
       ],
       "presets": [
         "react-native"
