--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^0.19.1",
     "react-native-svg-uri": "^1.2.3"
   },
