--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-navigation": "^2.0.2641",
     "react-native-svg-uri": "^1.2.3"
   },
   "devDependencies": {
