--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,3 @@
 {
-  "presets": [
-    "babel-preset-expo"
-  ],
-  "env": {
-    "development": {
-      "plugins": [
-        "transform-react-jsx-source",
-        "transform-decorators-legacy"
-      ],
-      "presets": [
-        "react-native"
-      ]
-    }
-  }
+  "presets": ["babel-preset-expo"]
 }
