--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^30.0.1",
+    "expo": "^31.0.0",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react": "^16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-svg-uri": "^1.2.3"
   },
