--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^2.0.2641",
-    "react-native-svg-uri": "^1.2.3"
+    "react-native-svg-uri": "^1.2.3",
+    "react-navigation": "^3.0.2"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
