--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "eslint": "eslint app.js src/*",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -24,8 +25,14 @@
     "react-navigation": "^3.0.2"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.11.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "react-dom": "^16.6.3"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "react-dom": "^16.6.3",
+    "schedule": "^0.4.0"
   }
 }
