--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eslint": "eslint app.js src/*",
+    "eslint": "eslint app.js src/* --fix",
     "eject": "expo eject"
   },
   "dependencies": {
