--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^2.0.2641",
