eslint babel/semi autofix

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -41,6 +41,9 @@ rules:
   semi:
     - error
     - never
+  babel/semi:
+    - error
+    - never
   no-var:
     - error
   prefer-arrow-callback:
