--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "^31.0.0",
+    "expo-localization": "^1.0.0",
     "i18n-js": "^3.1.0",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
