Finish implement address validation logic

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "^31.0.0",
     "expo-localization": "^1.0.0",
     "i18n-js": "^3.1.0",
+    "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "npm": "^6.4.1",
