--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
+---
 language: node_js
 node_js:
-  - "stable"
+  - node
+  - lts/*
 cache:
   directories:
-    - node_modules
     - ~/.npm
 before_script:
   - npm install -g npm@latest
 script:
-  - npm run lint
-#  - npm test
-  - npx expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
-  - npx expo publish --non-interactive
+  - npm ci
+  - npx jest --ci
