--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
+    "node-libs-browser": "^2.2.0",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
@@ -27,7 +28,8 @@
     "react-native-navigation": "^2.0.2641",
     "react-native-svg-uri": "^1.2.3",
     "react-navigation": "^3.0.2",
-    "rxjs": "^6.4.0"
+    "rxjs": "^6.4.0",
+    "web3": "^1.0.0-beta.48"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
