--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
     "expo": "^31.0.0",
     "expo-localization": "^1.0.0",
     "i18n-js": "^3.1.0",
@@ -17,6 +18,7 @@
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "node-libs-browser": "^2.2.0",
+    "node-libs-react-native": "^1.0.3",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
@@ -29,6 +31,7 @@
     "react-native-svg-uri": "^1.2.3",
     "react-navigation": "^3.0.2",
     "rxjs": "^6.4.0",
+    "vm-browserify": "^1.1.0",
     "web3": "^1.0.0-beta.48"
   },
   "devDependencies": {
