Success the apply web3.js library

--- a/app.json
+++ b/app.json
@@ -25,5 +25,8 @@
     "packagerOpts": {
       "config": "./rn-cli.config.js"
     }
+  },
+  "packagerOpts": {
+    "config": "./rn-cli.config.js"
   }
 }
