--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "babel-plugin-react-native-nodeify-hack": "^1.0.1",
     "buffer": "^5.2.1",
     "expo": "^31.0.0",
     "expo-localization": "^1.0.0",
@@ -35,7 +36,9 @@
     "web3": "^1.0.0-beta.48"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
