--- a/app.json
+++ b/app.json
@@ -1,32 +1,4 @@
 {
-  "expo": {
-    "name": "LinkbitApplication3",
-    "description": "This project is really great.",
-    "slug": "LinkbitApplication3",
-    "privacy": "public",
-    "sdkVersion": "31.0.0",
-    "platforms": ["ios", "android"],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "packagerOpts": {
-      "config": "./rn-cli.config.js"
-    }
-  },
-  "packagerOpts": {
-    "config": "./rn-cli.config.js"
-  }
+  "name": "web3WithReactNative",
+  "displayName": "web3WithReactNative"
 }
