--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "empty-project-template",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "Linkbit-Application",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eslint": "eslint src/* --fix",
-    "eject": "expo eject"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
   "dependencies": {
-    "babel-plugin-react-native-nodeify-hack": "^1.0.1",
-    "buffer": "^5.2.1",
-    "expo": "^31.0.0",
-    "expo-localization": "^1.0.0",
-    "i18n-js": "^3.1.0",
+    "i18n-js": "^3.2.1",
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
-    "node-libs-browser": "^2.2.0",
     "node-libs-react-native": "^1.0.3",
-    "npm": "^6.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react": "16.6.3",
+    "react-dom": "^16.6.3",
+    "react-native": "0.57.8",
     "react-native-action-button": "^2.8.5",
-    "react-native-dialog": "^5.5.0",
+    "react-native-dialog": "^5.6.0",
     "react-native-dropdown-menu": "^2.0.0",
-    "react-native-elements": "^0.19.1",
-    "react-native-navigation": "^2.0.2641",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-navigation": "^2.16.0",
+    "react-native-randombytes": "^3.5.1",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.0.2",
     "rxjs": "^6.4.0",
     "vm-browserify": "^1.1.0",
-    "web3": "^1.0.0-beta.48"
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "23.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "react-dom": "^16.6.3",
-    "schedule": "^0.4.0"
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.51.0",
+    "react-test-renderer": "16.6.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
