--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-dom": "^16.6.3",
-    "react-native": "0.57.8",
+    "react-native": "^0.57.8",
     "react-native-action-button": "^2.8.5",
     "react-native-dialog": "^5.6.0",
     "react-native-dropdown-menu": "^2.0.0",
@@ -31,21 +31,35 @@
     "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "babel-cli": "^6.26.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/runtime": "^7.4.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-jest": "^24.7.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.0",
-    "react-test-renderer": "16.6.3"
+    "jest": "^24.7.1",
+    "jest-fetch-mock": "^2.1.2",
+    "metro-react-native-babel-preset": "0.51.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/jest-config.js"
+    ],
+    "globals": {
+      "__DEV__": true
+    }
+  },
+  "transform": {
+    "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+    ".(ts|tsx)": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
   }
 }
