--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "web3WithReactNative",
-  "displayName": "web3WithReactNative"
+  "name": "LinkbitApplication",
+  "displayName": "LinkbitApplication"
 }
