--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "cryptr": "^4.0.2",
     "i18n-js": "^3.2.1",
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
