--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.11",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
+    "moment": "^2.24.0",
     "node-libs-react-native": "^1.0.3",
     "prop-types": "^15.6.2",
     "react": "16.6.3",
