--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,9 @@
 language: node_js
 node_js:
   - node
-  - lts/*
 cache:
   directories:
-    - ~/.npm
-before_script:
-  - npm install -g npm@latest
+    - node_modules
 script:
   - npm install
-  - npm ci
-  - npx jest --ci --passWithNoTests
+  - npm run test
