--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
----
 language: node_js
 node_js:
-  - node
+  - "stable"
 cache:
   directories:
-    - node_modules
+  - node_modules
 script:
   - npm install
   - npm run test
