--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cryptr": "^4.0.2",
     "eth-ecies": "^1.0.3",
     "ethereumjs-util": "^6.1.0",
