--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-randombytes": "^3.5.1",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-webview": "^5.12.0",
     "react-navigation": "^3.0.2",
     "rxjs": "^6.4.0",
     "vm-browserify": "^1.1.0",
