--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-navigation": "^2.16.0",
     "react-native-randombytes": "^3.5.1",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^6.4.2",
     "react-native-webview": "^5.12.0",
     "react-navigation": "^3.0.2",
