--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
-language: node_js
-node_js:
-  - "stable"
-cache:
-  directories:
-  - node_modules
-script:
-  - npm install
-  - npm run test
+language: android
+before_install: #1.1
+- nvm install 6
+- node --version
+install: #1.2
+- npm install
+android: #1.3
+  components:
+  - build-tools-23.0.1
+  - android-23
+  - extra-android-m2repository
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - addon-google_apis-google-16
+script: 
+- npm run ci #2
+- cd android && ./gradlew assembleRelease #3
