--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: android
-before_install: #1.1
-- nvm install 6
+before_install:
+- nvm install 10
 - node --version
-install: #1.2
+- yes | sdkmanager "platforms;android-23"
+install:
 - npm install
-android: #1.3
+android:
   components:
   - build-tools-23.0.1
   - android-23
@@ -12,6 +13,10 @@ android: #1.3
   - extra-google-google_play_services
   - extra-google-m2repository
   - addon-google_apis-google-16
+  licenses:
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 script: 
-- npm run ci #2
-- cd android && ./gradlew assembleRelease #3
+- npm run ci
+- cd android && ./gradlew assembleRelease
