--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "ethereumjs-wallet": "^0.6.3",
     "i18n-js": "^3.2.1",
     "lodash": "^4.17.11",
-    "mobx": "^5.5.2",
-    "mobx-react": "^5.3.6",
+    "mobx": "^4.11.0",
+    "mobx-react": "^5.0.0",
     "moment": "^2.24.0",
     "node-libs-react-native": "^1.0.3",
     "prop-types": "^15.6.2",
+    "proxy-polyfill": "^0.3.0",
     "react": "16.6.3",
     "react-dom": "^16.6.3",
     "react-native": "^0.57.8",
