Fix the wallet create validation logic

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "LinkbitApplication",
-  "displayName": "LinkbitApplication"
+  "name": "Linkbit-Application",
+  "displayName": "Linkbit-Application"
 }
