--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-webview')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-touch-id')
+    compile project(':react-native-randombytes')
+    compile project(':react-native-gesture-handler')
     implementation project(':react-native-webview')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-touch-id')
