--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gesture-handler": "^1.0.5",
     "react-native-randombytes": "^3.5.1",
     "react-native-svg-uri": "^1.2.3",
     "react-native-touch-id": "^4.4.1",
@@ -43,12 +43,14 @@
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-flow": "^7.0.0",
     "@babel/runtime": "^7.4.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^23.4.2",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -58,7 +60,7 @@
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.7.1",
     "jest-fetch-mock": "^2.1.2",
-    "metro-react-native-babel-preset": "0.51.0"
+    "metro-react-native-babel-preset": "^0.55.0"
   },
   "jest": {
     "preset": "react-native",
