--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "cryptr": "^4.0.2",
     "eth-ecies": "^1.0.3",
+    "ethereumjs-units": "^0.2.0",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
     "i18n-js": "^3.2.1",
