--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,14 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+    signingConfigs {
+        debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -181,9 +189,6 @@ android {
 
 dependencies {
     implementation project(':react-native-vector-icons')
-    implementation project(':@react-native-community_async-storage')
-    implementation project(':react-native-randombytes')
-    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
